# flytie

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  fly-tying-tracker-spec.md  my-patterns.json  pyproject.toml  v0.2.0-phase1-spec.md
.github/workflows/: ci.yml  release.yml
docs/: ai-suggestions.md  commands.md  index.md  json-schema.md  migrating-from-notebook.md  pattern-file-format.md  quickstart.md  shopping-list.md
src/flytie/: __init__.py  __main__.py  cli.py  cli_old.py  config.py  db.py  models.py  render.py  render_old.py
src/flytie/ai/: __init__.py  suggest.py
src/flytie/core/: __init__.py  dedupe.py  dto.py  parsing.py  parsing_old.py  patterns.py  portability.py  shop.py  shop_old.py  stats.py  suggestions.py  versions.py  versions_old.py
src/flytie/migrations/: __init__.py  env.py  env_old.py
src/flytie/migrations/versions/: 5af955bd607b_initial_schema.py
src/flytie/pdf/: __init__.py  export.py
src/flytie/templates/: pattern_card.css  pattern_card.html
tests/: _helpers.py  conftest.py  test_ai_suggest.py  test_audit_fixes.py  test_cli_commands.py  test_cli_export.py  test_cli_phase3.py  test_cli_suggest.py  test_config.py  test_db.py  test_dedupe.py  test_models.py  test_parsing.py  test_patterns_repo.py  test_patterns_repo_old.py  test_pdf_export.py  test_portability.py  test_review_fixes.py  test_review_fixes_old.py  test_review_fixes_phase2.py  test_review_fixes_phase3.py  test_review_fixes_phase4.py  test_review_fixes_phase5.py  test_review_fixes_phase6.py  test_shop.py  test_suggestions.py  test_v0_1_1_fixes.py  test_v0_1_2_fixes.py  test_v0_2_phase1.py  test_versions.py
