[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flytie"
# Version lives in `src/flytie/__init__.py` (`__version__`) and is read at
# build time via the [tool.hatch.version] table below. Single source of
# truth — `flytie --version` and the wheel metadata can no longer disagree.
dynamic = ["version"]
description = "A CLI for managing, versioning, and exporting fly tying patterns."
readme = "README.md"
requires-python = ">=3.10"
# PEP 639: SPDX expression + explicit license-files. Replaces the deprecated
# `{ text = "MIT" }` form and the "License ::" classifier; this is what
# ships the LICENSE file in the wheel reliably.
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Finn Gidden", email = "finn.gidden@gmail.com" }]
keywords = ["fly-fishing", "fly-tying", "cli", "patterns"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
# Upper bounds cap the next major of each dependency: a CLI tool pins
# conservatively so a transitive major bump can't silently break a user's
# install. WeasyPrint and the pre-1.0 Anthropic SDK are the most volatile.
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.7,<15.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "platformdirs>=4.2,<5.0",
    "tomli>=2.0,<3.0; python_version<'3.11'",
    "tomli-w>=1.0,<2.0",
    "pydantic>=2.7,<3.0",
    # Jinja2 is core (not in the `pdf` extra) so that `flytie export --html`
    # — the no-native-deps fallback the spec FR-5 promises — works on a bare
    # `pip install flytie` without WeasyPrint. Pure-Python and small.
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=61.0,<70.0"]
ai = ["anthropic>=0.30,<1.0"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "syrupy>=4.6",
    # Ruff handles both lint and format (Black-compatible). The spec
    # originally listed "ruff + black"; v0.1.2 dropped black since
    # `ruff format` produces identical output and running two formatters
    # with the same opinions adds noise without value.
    "ruff>=0.5",
    "mypy>=1.10",
    # `pre-commit` powers the project's commit/pre-push hooks (ruff format,
    # ruff check, basic hygiene, and pytest-at-narrow-terminal). See
    # CONTRIBUTING.md for the install + `pre-commit install --hook-type ...`
    # one-liner. pre-commit.ci runs the same config on every PR.
    "pre-commit>=3.5",
]

[project.scripts]
flytie = "flytie.cli:app"

[project.urls]
Homepage = "https://github.com/finngidden/flytie"
Documentation = "https://github.com/finngidden/flytie#readme"
Changelog = "https://github.com/finngidden/flytie/blob/main/CHANGELOG.md"
Issues = "https://github.com/finngidden/flytie/issues"

[tool.hatch.version]
# Read __version__ from the package itself, so it stays the single source
# of truth across the runtime, the CLI's `--version` output, and the wheel
# metadata. The release workflow asserts the pushed `v*` tag matches.
path = "src/flytie/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/flytie"]

[tool.hatch.build.targets.wheel.force-include]
"src/flytie/migrations/script.py.mako" = "flytie/migrations/script.py.mako"
"src/flytie/templates/pattern_card.html" = "flytie/templates/pattern_card.html"
"src/flytie/templates/pattern_card.css" = "flytie/templates/pattern_card.css"

[tool.hatch.build.targets.sdist]
include = [
    "src/flytie/**",
    "tests/**",
    "docs/**",
    "alembic.ini",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --ignore=tests/test_patterns_repo_old.py --ignore=tests/test_review_fixes_old.py"
markers = [
    "smoke: minimal happy-path tests run before commit",
]

[tool.coverage.run]
source = ["src/flytie"]
branch = true
omit = [
    # Inert placeholders from the Phase 3 FUSE recovery (see handoff.md
    # known issue #5). They're already excluded from pytest collection
    # (`addopts --ignore=...`) and ruff lint ([tool.ruff].exclude). The
    # same exclusion belongs here so they don't drag the coverage floor
    # down — they contain zero shipping code.
    "src/flytie/*_old.py",
    "src/flytie/core/*_old.py",
    "src/flytie/migrations/*_old.py",
    # `__main__.py` is a 5-line entry-point wrapper exercised only via
    # `python -m flytie`; testing it adds no real coverage value relative
    # to the existing `flytie` console_script tests in `test_cli_*.py`.
    "src/flytie/__main__.py",
    # Alembic migrations run inside a subprocess that coverage.py can't
    # see. The migration's *effect* is exercised end-to-end by every
    # test that uses the `database` fixture (`create_schema()` runs the
    # upgrade), and the stamped-but-empty repair path is pinned by
    # `test_create_schema_repairs_stamped_but_empty_database` in
    # `tests/test_review_fixes_phase6.py`. The contract is tested even
    # though the lines aren't visible to coverage.
    "src/flytie/migrations/env.py",
    "src/flytie/migrations/versions/*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Spec NFR §4 promises >85% coverage on core modules. `fail_under` makes
# the bar enforceable: any future change that drops the project below 85%
# fails CI rather than silently regressing. The current real coverage is
# ~93% across the modules above; 85% leaves headroom for legitimate
# uncovered defensive branches without requiring everything to be 100%.
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py310"
# Stale FUSE-locked placeholders left over from the dev sandbox.
exclude = [
    "tests/test_patterns_repo_old.py",
    "tests/test_review_fixes_old.py",
    "src/flytie/migrations/env_old.py",
    "src/flytie/cli_old.py",
    "src/flytie/render_old.py",
    "src/flytie/core/shop_old.py",
    "src/flytie/core/parsing_old.py",
    "src/flytie/core/versions_old.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# B008: Typer requires `typer.Argument`/`typer.Option` as defaults; that's the framework idiom.
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
# Explicitly classify packages so the I001 import-sorting rule produces
# the same result across ruff versions and developer environments.
# Without this, ruff's auto-detection treated `alembic` and `alembic.config`
# inconsistently (sandbox vs. CI), thrashing the import order on every
# `ruff --fix` run. v0.1.2 added the explicit classification after a
# concrete CI failure traced to that disagreement; see CONTRIBUTING.md
# "Note: ci.yml's lint step" for the full story.
known-first-party = ["flytie"]
known-third-party = ["alembic", "sqlalchemy", "typer", "rich", "pydantic", "anthropic", "weasyprint", "jinja2", "platformdirs", "tomli", "tomli_w"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
